Fix: Add display properties.
Add display properties to show the form in the right way.

--- a/sheets/loader.css
+++ b/sheets/loader.css
@@ -12,6 +12,14 @@
 	z-index:          1999999999;
 }
 
+#loaderForm {
+	display: inline;
+}
+
+#loaderFormInputs {
+	display: none;
+}
+
 #loaderFormat {
 	margin: 0;
 }
